--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "matplotlib>=3.7", "numpy>=1.24", "numba>=0.57"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "OskarFieldModule"
-version = "0.3.5"
+version = "0.4.1"
 authors = [
   { name="Oskar Idland", email="oskaridland@hotmail.com" },
 ]
-description = "Package for calculating fields in the FYS-1120 Course "
+description = "Package for calculating eleSSctric and magnetic fields and potentials in the FYS-1120 Course "
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/Oskar-Idland/FYS-1120/tree/main/ELMAG_Module"
-"Bug Tracker" = "https://github.com/Oskar-Idland/FYS-1120/tree/main/ELMAG_Module"
+"Homepage" = "https://github.com/Oskar-Idland/Oskar-Field-Module"
+"Bug Tracker" = "https://github.com/Oskar-Idland/Oskar-Field-Module"
